content/v1.3.0/zh/api/mission-ext/BehaviorDefendCastleKeyPosition.md
---
title: "BehaviorDefendCastleKeyPosition"
description: "BehaviorDefendCastleKeyPosition 的自动生成类参考。"
---
# BehaviorDefendCastleKeyPosition

**Namespace:** TaleWorlds.MountAndBlade
**Module:** TaleWorlds.MountAndBlade
**Type:** `public class BehaviorDefendCastleKeyPosition : BehaviorComponent`
**Base:** `BehaviorComponent`
**File:** `TaleWorlds.MountAndBlade/BehaviorDefendCastleKeyPosition.cs`

## 概述

`BehaviorDefendCastleKeyPosition` 位于 `TaleWorlds.MountAndBlade`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.MountAndBlade` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `NavmeshlessTargetPositionPenalty` | `public override float NavmeshlessTargetPositionPenalty { get; }` |

## 主要方法

### GetBehaviorString
`public override TextObject GetBehaviorString()`

**用途 / Purpose:** **用途 / Purpose:** 读取并返回当前对象中 behavior string 的结果。

```csharp
// 先通过子系统 API 拿到 BehaviorDefendCastleKeyPosition 实例
BehaviorDefendCastleKeyPosition behaviorDefendCastleKeyPosition = ...;
var result = behaviorDefendCastleKeyPosition.GetBehaviorString();
```

### OnValidBehaviorSideChanged
`public override void OnValidBehaviorSideChanged()`

**用途 / Purpose:** **用途 / Purpose:** 在 valid behavior side changed 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 BehaviorDefendCastleKeyPosition 实例
BehaviorDefendCastleKeyPosition behaviorDefendCastleKeyPosition = ...;
behaviorDefendCastleKeyPosition.OnValidBehaviorSideChanged();
```

### TickOccasionally
`public override void TickOccasionally()`

**用途 / Purpose:** **用途 / Purpose:** 在每一帧或每个更新周期内推进occasionally的状态。

```csharp
// 先通过子系统 API 拿到 BehaviorDefendCastleKeyPosition 实例
BehaviorDefendCastleKeyPosition behaviorDefendCastleKeyPosition = ...;
behaviorDefendCastleKeyPosition.TickOccasionally();
```

### OnDeploymentFinished
`public override void OnDeploymentFinished()`

**用途 / Purpose:** **用途 / Purpose:** 在 deployment finished 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 BehaviorDefendCastleKeyPosition 实例
BehaviorDefendCastleKeyPosition behaviorDefendCastleKeyPosition = ...;
behaviorDefendCastleKeyPosition.OnDeploymentFinished();
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
BehaviorDefendCastleKeyPosition behaviorDefendCastleKeyPosition = ...;
behaviorDefendCastleKeyPosition.GetBehaviorString();
```

## 参见

- [本区域目录](../)